[project]
name = "ledger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.1",
]

[project.scripts]
ledger = "ledger:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
